@@ -13,6 +13,6 @@ AUX 6/tomcat.init 3529 RMD160 45aabac31804faff713ca3648f4a675e5ea7ea89 SHA1 f2b4
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
 DIST apache-tomcat-6.0.18-src.tar.gz 3484249 RMD160 ef85db0d65a4f3bdd3ca821420d06535050b6a93 SHA1 9182b0d6b2d0cb2d60f04be6211f3b3516bc518e SHA256 f5ad5dd12e221d75e25234ca734fb434cf45f3fcea93623232a73dc9bfd03dc4
 EBUILD tomcat-5.5.27-r3.ebuild 11391 RMD160 824bc04bea4a05d70063b2db6517c3d29fc5fdbd SHA1 6232ff022693d59972a097862d59bc0ad2632ccd SHA256 b6d0cf229601adea90d885a98d068ae02752b18a94d985cf2e07c33c9c737398
-EBUILD tomcat-6.0.18-r3.ebuild 6537 RMD160 5af0b4930ce2d6819b6af685f6116aa54c8063c6 SHA1 42f64d6f5de7013f2aa1938fba0b5dfca95ef054 SHA256 aeff993d6369a7263602372dc9f883e8c6ccd66db2c5be1727f01062d7796439
-MISC ChangeLog 56265 RMD160 c48e59b42b174ce1329e2bf039880786987dc820 SHA1 75dca02ab6f676d220af5d4333e2a747d6dcb62b SHA256 f4ae1b11de1bf5b80c074a9215e91acf42434335381f2fd86d46854de85e871c
+EBUILD tomcat-6.0.18-r3.ebuild 10750 RMD160 0a5ecfbee7c5ddb223a87d784950a381869669a1 SHA1 c592b4236761b15bba7f1bcc0ba8ae4c8a651b2c SHA256 fa0fd9cc86a9572c4cbc0ab778e66fc92e3c7b213df2fdaf6b7589eb42eae32d
+MISC ChangeLog 56391 RMD160 4bea53d006be098d74ea375a2764d79e808c8108 SHA1 42d96387e36432a34af13478b9878472629d39af SHA256 d6cfa467218e7df57ab15210ca7e31a1916e3d7c56df0860c7cefc61e0405d9e
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
